# intercept-plugin-wta

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  WIKI_CRAWLER_GUIDE.md  monitor.py  vcpkg.json
.windsurf/rules/: cmake-build-rules.md  project-overview.md
.windsurf/workflows/: add-field.md
addons/main/: config.cpp
mission/: mission.sqm
proto/: wta_messages.proto
src/: CMakeLists.txt  main.cpp
src/wta/core/: config.hpp  solver_messages.hpp  types.hpp
src/wta/exec/: entity_registry.cpp  entity_registry.hpp  executor.hpp  executor_intercept.cpp  sequential_attack_test.cpp  sequential_attack_test.hpp  task.hpp  task_executor.cpp  task_executor.hpp  uav_controller.cpp  uav_controller.hpp  uav_entity.cpp  uav_entity.hpp
src/wta/net/: log_sink_zmq.cpp  log_sink_zmq.hpp  protobuf_adapter.hpp  solver_client.hpp  solver_client_zmq.cpp  solver_client_zmq_backup.cpp  solver_client_zmq_new.cpp
src/wta/orchestrator/: orchestrator.cpp  orchestrator.hpp
src/wta/world/: event_bus.hpp  world_config.cpp  world_config.hpp  world_sampler.hpp  world_sampler_intercept.cpp  world_sampler_intercept_test.cpp
tests/: CMakeLists.txt  test_event_bus.cpp  test_protobuf_adapter.cpp  test_types.cpp  test_zmq_client.cpp
